Fix: Performance report(Graph)     - Change series fill color     - Remove line on Other Status Report     - profile page button alignment     - Add button action on select template tab

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -433,6 +433,7 @@ a {
   User Profile
 **********************/
 .user-profile {
+  margin-bottom: 25px;
   #toast-container {
     .toast {
       float: right;
